chrome/content/common/bindings.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

/* rebind as a workaround for the hidden image */
menu.menu-iconic {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#menu-iconic-addressable);
}

/* splitmenu */
splitmenu {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#splitmenu);
}

/* closebox */
.closer {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#closebox);
}
.closer .childrenbox {
	margin-left: 13px;
}
.closer > .closebox-title {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#closebox-title);
}
.closebox-title {
	cursor: pointer !important;
}
.closebox-title:hover {
	text-decoration: underline;
}
.closer[closed="true"] {
	border:0px; margin: 0px; padding: 0px;
}

/* saveddropdown */
saveddropdown {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#saveddropdown);
}

/* metalinker */
richlistbox.metalinker .item {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#metalinker-item);
}

/* hashinput */
hashinput {
	-moz-binding: url(chrome://dta/content/common/bindings.xml#hashinput);
}

/* speed list */
menupopup.speedlimitlist-popup {
    -moz-binding: url(chrome://dta/content/common/bindings.xml#speed-limit-list-popup);
}
menu > menupopup.speedlimitlist-popup menuitem[checked] {
	font-weight: bold;
}

